# BotDiscord

./: .example.env  .gitignore  README.md  pyproject.toml  taches.json
.github/workflows/: disocrd-ci.yml
src/discord_bot/: mainBot.py
