[project]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "s29duckys",email = "nbarasraso@edenschool.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "discord (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "discord_bot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
